added styling to about.html

--- a/about.html
+++ b/about.html
@@ -66,7 +66,6 @@
         <img src="img/portrait1.jpg" alt="Leah Selig" class="bio-image" />
 
         <div class="bio">
-          <h3 class="text-secondary"></h3>
           <p>
             Hi! My name is Leah Selig and I'm an ambitious Full-Stack Developer
             in training. I have always had a love of technology, but my younger
@@ -118,7 +117,7 @@
         <!-- This is where I used Bootstrap to create custom progress bars for my skills section. I will update the percentages as I progress through the course. -->
         <div class="skill skill-2">
           <div class="vstack gap-3">
-            <h3>My Skills So Far:</h3>
+            <h3>My Skills:</h3>
             <div class="progress" style="height: 20px">
               <div
                 class="progress-bar progress-bar-striped progress-bar-animated bg-info text-start fw-semibold"
