adjusted video sizing

--- a/about.html
+++ b/about.html
@@ -84,15 +84,19 @@
             Course learning the MERN stack. Check out my projects page to see
             the fun stuff I'm working on.
           </p>
-          <iframe
-            width="560"
-            height="315"
-            src="https://www.youtube-nocookie.com/embed/7Bp-k7yN1tU"
-            title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen
-          ></iframe>
+          <div class="video-wrapper">
+            <div class="video">
+              <iframe
+                width="560"
+                height="315"
+                src="https://www.youtube-nocookie.com/embed/7Bp-k7yN1tU"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+            </div>
+          </div>
         </div>
 
         <div class="skill skill-1">
