adjusted links to outside, more clarity on contact

--- a/about.html
+++ b/about.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <!-- Bootstrap Link Version 5.2-->
+    <!-- BOOTSTRAP LINK Version 5.2
+    Scroll down half the page to see how it is used -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -106,13 +107,13 @@
             <a href="mailto:lselig444@gmail.com">
               <i class="fa-solid fa-envelope fa-2x"></i>
             </a>
-            <a href="https://github.com/leahselig">
+            <a href="https://github.com/leahselig" target="_blank">
               <i class="fab fa-github fa-2x"></i>
             </a>
-            <a href="https://www.linkedin.com/in/leah-selig">
+            <a href="https://www.linkedin.com/in/leah-selig" target="_blank">
               <i class="fab fa-linkedin fa-2x"></i>
             </a>
-            <a href="https://twitter.com/penguingirl4444">
+            <a href="https://twitter.com/penguingirl4444" target="_blank">
               <i class="fab fa-twitter fa-2x"></i>
             </a>
           </div>
@@ -224,6 +225,7 @@
         </div>
       </div>
     </main>
+    <!--END BOOTSTRAP-->
 
     <footer id="main-footer">Copyright &copy; Leah Selig 2022</footer>
 
