--- a/contact.html
+++ b/contact.html
@@ -69,17 +69,20 @@
           <p>
             I'm currently located in Southern California, but open to relocation in the US and Internationally!
           </p>
+          <p>
+            The best way to contact me is through email. Click the envelpoe icon below. You can also click the icons below to see my GitHub, LinkedIn, and Twitter accounts.
+          </p>
           <div class="icons">
             <a href="mailto:lselig444@gmail.com">
               <i class="fa-solid fa-envelope fa-2x"></i>
             </a>
-            <a href="https://github.com/leahselig">
+            <a href="https://github.com/leahselig" target="_blank">
               <i class="fab fa-github fa-2x"></i>
             </a>
-            <a href="https://www.linkedin.com/in/leah-selig">
+            <a href="https://www.linkedin.com/in/leah-selig" target="_blank">
               <i class="fab fa-linkedin fa-2x"></i>
             </a>
-            <a href="https://twitter.com/penguingirl4444">
+            <a href="https://twitter.com/penguingirl4444" target="_blank">
               <i class="fab fa-twitter fa-2x"></i>
             </a>
           </div>  
