--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
         <a href="mailto:lselig444@gmail.com">
           <i class="fa-solid fa-envelope fa-2x"></i>
         </a>
-        <a href="https://github.com/leahselig">
+        <a href="https://github.com/leahselig" target="_blank">
           <i class="fab fa-github fa-2x"></i>
         </a>
-        <a href="https://www.linkedin.com/in/leah-selig">
+        <a href="https://www.linkedin.com/in/leah-selig" target="_blank">
           <i class="fab fa-linkedin fa-2x"></i>
         </a>
-        <a href="https://twitter.com/penguingirl4444">
+        <a href="https://twitter.com/penguingirl4444" target="_blank">
           <i class="fab fa-twitter fa-2x"></i>
         </a>
       </div>
